--- a/main.html
+++ b/main.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Gallery</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<div class="container-fluid">
+  <div class="row">
+    <!-- First Row -->
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+  </div>
+  <div class="row">
+    <!-- Second Row -->
+    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+  </div>
+  <div class="row">
+    <!-- Third Row -->
+    <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+  </div>
+  <div class="row">
+    <!-- Fourth Row -->
+    <div class="col-sm-12"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+  </div>
+</div>
 
 </body>
-
 </html>
