--- a/main.html
+++ b/main.html
@@ -12,37 +12,37 @@
 <div class="container-fluid">
   <div class="row">
     <!-- First Row -->
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
   </div>
   <div class="row">
     <!-- Second Row -->
-    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
   </div>
   <div class="row">
     <!-- Third Row -->
-    <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
-    <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
+    <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
   </div>
   <div class="row">
     <!-- Fourth Row -->
-    <div class="col-sm-12"><img src="https://via.placeholder.com/100" alt="Movie Image" width="100" height="100"></div>
+    <div class="col-sm-12"><img src="https://goswift.in/img/logo.png" alt="Movie Image" width="100px" height="100px"></div>
   </div>
 </div>
 
